tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_18.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := ((2 > 1223) & (r OR (200 >= (200 + 2))));
               y := 2;
               y := 0;
               z := (x DIV (1223 * z));
               q := p;
               y := (x - ((y DIV z) + (1223 - z)));
               y := ((1223 * y) + ((y + (0 DIV 0)) + z));
  (* error *)  y := z;
               p := p;
               z := x
END Test18.